--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.6.0
 altair==5.4.1
 attrs==25.3.0
 blinker==1.8.2
@@ -9,35 +10,54 @@ click==8.1.8
 colorama==0.4.6
 configobj==5.0.9
 configparser==7.1.0
+cycler==0.11.0
+Cython==0.29.30
+distlib==0.3.5
 etelemetry==0.3.1
+faiss-cpu==1.11.0
 filelock==3.16.1
+fonttools==4.34.4
+fsspec==2025.3.2
 gitdb==4.0.12
 GitPython==3.1.44
+google-auth==2.9.1
+google-auth-oauthlib==0.4.6
 httplib2==0.22.0
+huggingface-hub==0.30.2
 idna==3.10
 importlib_resources==6.4.5
 isodate==0.6.1
 Jinja2==3.1.6
+joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+kiwisolver==1.4.3
 looseversion==1.3.0
 lxml==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib==3.5.2
 mdurl==0.1.2
+mpmath==1.3.0
 narwhals==1.37.1
 networkx==3.1
 nibabel==5.2.1
 nipype==1.8.6
 numpy==1.24.4
+oauthlib==3.2.0
 packaging==24.2
 pandas==2.0.3
 pathlib==1.0.1
 pillow==10.4.0
 pkgutil_resolve_name==1.3.10
+platformdirs==2.5.2
 protobuf==5.29.4
 prov==2.0.1
+psutil==7.0.0
 pyarrow==17.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycocotools==2.0
 pydeck==0.9.1
 pydot==3.0.4
 Pygments==2.19.1
@@ -46,22 +66,41 @@ pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyxnat==1.6.3
+PyYAML==6.0.2
 rdflib==6.3.2
 referencing==0.35.1
+regex==2024.11.6
 requests==2.32.3
+requests-oauthlib==1.3.1
 rich==13.9.4
 rpds-py==0.20.1
+rsa==4.8
+safetensors==0.5.3
+scikit-learn==1.6.1
 scipy==1.10.1
+seaborn==0.11.2
+sentence-transformers==4.1.0
 simplejson==3.20.1
 six==1.17.0
 smmap==5.0.2
 streamlit==1.40.1
+sympy==1.14.0
 tenacity==9.0.0
+tensorboard-plugin-wit==1.8.1
+thop==0.1.1.post2207130030
+threadpoolctl==3.6.0
+tokenizers==0.21.1
 toml==0.10.2
+torch==2.7.0
+torchaudio==0.12.0
+torchvision==0.13.0
 tornado==6.4.2
+tqdm==4.67.1
 traits==6.3.2
+transformers==4.51.3
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.2.3
+virtualenv==20.15.1
 watchdog==4.0.2
 zipp==3.20.2
